--- a/index.html
+++ b/index.html
@@ -5,32 +5,38 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<header>
-			<a href="index.html">WebStudio</a>
+			<a class="logo header link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
 
 			<nav>
-				<ul>
+				<ul class="navigation list">
 					<li>
-						<a href="" rel="">Studio</a>
+						<a class="nav-link link" href="" rel="">Studio</a>
 					</li>
 					<li>
-						<a href="" rel="">Portfolio</a>
+						<a class="nav-link link" href="./portfolio.html" rel="">Portfolio</a>
 					</li>
 					<li>
-						<a href="" rel="">Contacts</a>
+						<a class="nav-link link" href="" rel="">Contacts</a>
 					</li>
 				</ul>
 			</nav>
 
-			<ul>
+			<ul class="list">
 				<li>
-					<a href="mailto:info@devstudio.com" rel="">info@devstudio.com</a>
+					<a class="contact link" href="mailto:info@devstudio.com" rel="">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+110001111111" rel="">+11 (000) 111-11-11</a>
+					<a class="contact link" href="tel:+110001111111" rel="">+11 (000) 111-11-11</a>
 				</li>
 			</ul>
 		</header>
@@ -38,17 +44,17 @@
 		<main>
 			<!--Effective Solutions-->
 
-			<section>
+			<section class="hero">
 				<h1>Effective Solutions<br />for Your Business</h1>
-				<button type="button">Order Service</button>
+				<button class="order-button" type="button">Order Service</button>
 			</section>
 
 			<!--Features-->
 
-			<section>
+			<section class="content-block">
 				<h2>Features</h2>
 
-				<ul>
+				<ul class="list">
 					<li>
 						<h3>Strategy</h3>
 						<p> Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
@@ -72,9 +78,9 @@
 
 			<!--What are we doing-->
 
-			<section>
+			<section class="content-block">
 				<h2>What are we doing</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<img src="./images/product-desktop.jpg" alt="desktop version" width="360" />
 					</li>
@@ -89,25 +95,25 @@
 
 			<!--Our Team-->
 
-			<section>
+			<section class="content-block grey">
 				<h2>Our Team</h2>
-				<ul>
-					<li>
+				<ul class="list">
+					<li class="team-list">
 						<img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
 						<h3>Mark Guerrero</h3>
 						<p>Product Designer</p>
 					</li>
-					<li>
+					<li class="team-list">
 						<img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
 						<h3>Tom Ford</h3>
 						<p>Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-list">
 						<img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" />
 						<h3>Camila Garcia</h3>
 						<p>Marketing</p>
 					</li>
-					<li>
+					<li class="team-list">
 						<img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
 						<h3>Daniel Wilson</h3>
 						<p>UI Designer</p>
@@ -118,9 +124,11 @@
 
 		<!--footer-->
 
-		<footer>
-			<a href="index.html">WebStudio</a>
-			<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+		<footer class="footer">
+			<div>
+				<a class="logo footer link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
+				<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+			</div>
 		</footer>
 	</body>
 </html>
