--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
@@ -52,49 +58,67 @@
 				<!-- SERVICES LIST -->
 				<ul>
 					<li>
-						<img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" />
-						<h3>Banking App Interface Concept</h3>
-						<p>App</p>
+						<a href="">
+							<img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" />
+							<h3>Banking App Interface Concept</h3>
+							<p>App</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300" />
-						<h3>Cashless Payment</h3>
-						<p>Marketing</p>
+						<a href="">
+							<img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300" />
+							<h3>Cashless Payment</h3>
+							<p>Marketing</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/meditaion-app.jpg" alt="meditaion-app" width="360" height="300" />
-						<h3>Meditaion App</h3>
-						<p>App</p>
+						<a href="">
+							<img src="./images/meditaion-app.jpg" alt="meditaion-app" width="360" height="300" />
+							<h3>Meditaion App</h3>
+							<p>App</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/texi-service.jpg" alt="texi-service" width="360" height="300" />
-						<h3>Taxi Service</h3>
-						<p>Marketing</p>
+						<a href="">
+							<img src="./images/texi-service.jpg" alt="texi-service" width="360" height="300" />
+							<h3>Taxi Service</h3>
+							<p>Marketing</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/screen-illustration.jpg" alt="screen-illustration" width="360" height="300" />
-						<h3>Screen Illustrations</h3>
-						<p>Design</p>
+						<a href="">
+							<img src="./images/screen-illustration.jpg" alt="screen-illustration" width="360" height="300" />
+							<h3>Screen Illustrations</h3>
+							<p>Design</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300" />
-						<h3>Online Courses</h3>
-						<p>Marketing</p>
+						<a href="">
+							<img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300" />
+							<h3>Online Courses</h3>
+							<p>Marketing</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/instagram-stories.jpg" alt="instagram-stories" width="360" height="300" />
-						<h3>Instagram Stories Concept</h3>
-						<p>Design</p>
+						<a href="">
+							<img src="./images/instagram-stories.jpg" alt="instagram-stories" width="360" height="300" />
+							<h3>Instagram Stories Concept</h3>
+							<p>Design</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/organic-food.jpg" alt="organic-food" width="360" height="300" />
-						<h3>Organic Food</h3>
-						<p>Web Site</p>
+						<a href="">
+							<img src="./images/organic-food.jpg" alt="organic-food" width="360" height="300" />
+							<h3>Organic Food</h3>
+							<p>Web Site</p>
+						</a>
 					</li>
 					<li>
-						<img src="./images/freesh-coffee.jpg" alt="freesh-coffee" width="360" height="300" />
-						<h3>Fresh Coffee</h3>
-						<p>Web Site</p>
+						<a href="">
+							<img src="./images/freesh-coffee.jpg" alt="freesh-coffee" width="360" height="300" />
+							<h3>Fresh Coffee</h3>
+							<p>Web Site</p>
+						</a>
 					</li>
 				</ul>
 			</section>
