new styles to css and changes
index.html / styles.css
- style headers
- style lists

--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
 			<!--Features-->
 
 			<section class="content-block">
-				<h2>Features</h2>
+				<h2 class="section-header">Features</h2>
 
 				<ul class="list">
 					<li>
-						<h3>Strategy</h3>
+						<h3 class="header">Strategy</h3>
 						<p> Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
 					</li>
 					<li>
-						<h3>Punctuality</h3>
+						<h3 class="header">Punctuality</h3>
 						<p> Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
 					</li>
 					<li>
-						<h3>Diligence</h3>
+						<h3 class="header">Diligence</h3>
 						<p>
 							Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3>Technologies</h3>
+						<h3 class="header">Technologies</h3>
 						<p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
 					</li>
 				</ul>
@@ -79,7 +79,7 @@
 			<!--What are we doing-->
 
 			<section class="content-block">
-				<h2>What are we doing</h2>
+				<h2 class="section-header">What are we doing</h2>
 				<ul class="list">
 					<li>
 						<img src="./images/product-desktop.jpg" alt="desktop version" width="360" />
@@ -96,7 +96,7 @@
 			<!--Our Team-->
 
 			<section class="content-block grey">
-				<h2>Our Team</h2>
+				<h2 class="section-header">Our Team</h2>
 				<ul class="list">
 					<li class="team-list">
 						<img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
