--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<nav>
 				<ul class="navigation list">
 					<li>
-						<a class="nav-link link" href="" rel="">Studio</a>
+						<a class="nav-link link" href="./index.html" rel="">Studio</a>
 					</li>
 					<li>
 						<a class="nav-link link" href="./portfolio.html" rel="">Portfolio</a>
@@ -45,7 +45,7 @@
 			<!--Effective Solutions-->
 
 			<section class="hero">
-				<h1>Effective Solutions<br />for Your Business</h1>
+				<h1 class="hero header">Effective Solutions<br />for Your Business</h1>
 				<button class="order-button" type="button">Order Service</button>
 			</section>
 
@@ -56,21 +56,21 @@
 
 				<ul class="list">
 					<li>
-						<h3 class="header">Strategy</h3>
+						<h3 class="list header">Strategy</h3>
 						<p> Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
 					</li>
 					<li>
-						<h3 class="header">Punctuality</h3>
+						<h3 class="list header">Punctuality</h3>
 						<p> Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
 					</li>
 					<li>
-						<h3 class="header">Diligence</h3>
+						<h3 class="list header">Diligence</h3>
 						<p>
 							Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3 class="header">Technologies</h3>
+						<h3 class="list header">Technologies</h3>
 						<p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
 					</li>
 				</ul>
@@ -98,24 +98,24 @@
 			<section class="content-block grey">
 				<h2 class="section-header">Our Team</h2>
 				<ul class="list">
-					<li class="team-list">
+					<li class="list-box team-list">
 						<img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
-						<h3>Mark Guerrero</h3>
+						<h3 class="list header">Mark Guerrero</h3>
 						<p>Product Designer</p>
 					</li>
-					<li class="team-list">
+					<li class="list-box team-list">
 						<img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
-						<h3>Tom Ford</h3>
+						<h3 class="list header">Tom Ford</h3>
 						<p>Frontend Developer</p>
 					</li>
-					<li class="team-list">
+					<li class="list-box team-list">
 						<img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" />
-						<h3>Camila Garcia</h3>
+						<h3 class="list header">Camila Garcia</h3>
 						<p>Marketing</p>
 					</li>
-					<li class="team-list">
+					<li class="list-box team-list">
 						<img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
-						<h3>Daniel Wilson</h3>
+						<h3 class="list header">Daniel Wilson</h3>
 						<p>UI Designer</p>
 					</li>
 				</ul>
