--- a/portfolio.html
+++ b/portfolio.html
@@ -15,108 +15,109 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html">WebStudio</a>
+			<a class="logo header link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
 
 			<nav>
-				<ul>
+				<ul class="navigation list">
 					<li>
-						<a href="" rel="">Studio</a>
+						<a class="nav-link link" href="./index.html" rel="">Studio</a>
 					</li>
 					<li>
-						<a href="./portfolio.html" rel="">Portfolio</a>
+						<a class="nav-link link" href="./portfolio.html" rel="">Portfolio</a>
 					</li>
 					<li>
-						<a href="" rel="">Contacts</a>
+						<a class="nav-link link" href="" rel="">Contacts</a>
 					</li>
 				</ul>
 			</nav>
 
-			<ul>
+			<ul class="list">
 				<li>
-					<a href="mailto:info@devstudio.com" rel="">info@devstudio.com</a>
+					<a class="contact link" href="mailto:info@devstudio.com" rel="">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+110001111111" rel="">+11 (000) 111-11-11</a>
+					<a class="contact link" href="tel:+110001111111" rel="">+11 (000) 111-11-11</a>
 				</li>
 			</ul>
 		</header>
 
-		<!--list of services-->
+		<!-- list of services -->
+
 		<main>
 			<section>
-				<h1>List of services</h1>
+				<h1 class="header">List of services</h1>
 
 				<!-- List filter -->
 				<div>
-					<button type="button">All</button>
-					<button type="button">Web Site</button>
-					<button type="button">App</button>
-					<button type="button">Design</button>
-					<button type="button">Marketing</button>
+					<button class="filter-button" type="button">All</button>
+					<button class="filter-button" type="button">Web Site</button>
+					<button class="filter-button" type="button">App</button>
+					<button class="filter-button" type="button">Design</button>
+					<button class="filter-button" type="button">Marketing</button>
 				</div>
 
 				<!-- SERVICES LIST -->
-				<ul>
-					<li>
-						<a href="">
+				<ul class="list">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" />
-							<h3>Banking App Interface Concept</h3>
+							<h3 class="header">Banking App Interface Concept</h3>
 							<p>App</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300" />
-							<h3>Cashless Payment</h3>
+							<h3 class="header">Cashless Payment</h3>
 							<p>Marketing</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/meditaion-app.jpg" alt="meditaion-app" width="360" height="300" />
-							<h3>Meditaion App</h3>
+							<h3 class="header">Meditaion App</h3>
 							<p>App</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/texi-service.jpg" alt="texi-service" width="360" height="300" />
-							<h3>Taxi Service</h3>
+							<h3 class="header">Taxi Service</h3>
 							<p>Marketing</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/screen-illustration.jpg" alt="screen-illustration" width="360" height="300" />
-							<h3>Screen Illustrations</h3>
+							<h3 class="header">Screen Illustrations</h3>
 							<p>Design</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300" />
-							<h3>Online Courses</h3>
+							<h3 class="header">Online Courses</h3>
 							<p>Marketing</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/instagram-stories.jpg" alt="instagram-stories" width="360" height="300" />
-							<h3>Instagram Stories Concept</h3>
+							<h3 class="header">Instagram Stories Concept</h3>
 							<p>Design</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/organic-food.jpg" alt="organic-food" width="360" height="300" />
-							<h3>Organic Food</h3>
+							<h3 class="header">Organic Food</h3>
 							<p>Web Site</p>
 						</a>
 					</li>
-					<li>
-						<a href="">
+					<li class="list-box">
+						<a href="" class="portfolio-item">
 							<img src="./images/freesh-coffee.jpg" alt="freesh-coffee" width="360" height="300" />
-							<h3>Fresh Coffee</h3>
+							<h3 class="header">Fresh Coffee</h3>
 							<p>Web Site</p>
 						</a>
 					</li>
@@ -125,9 +126,12 @@
 		</main>
 
 		<!--footer-->
-		<footer>
-			<a href="index.html">WebStudio</a>
-			<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+
+		<footer class="footer">
+			<div>
+				<a class="logo footer link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
+				<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+			</div>
 		</footer>
 	</body>
 </html>
