--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header>
-			<a class="logo header link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
+			<a class="logo header" href="index.html"><span class="logo-accent">Web</span>Studio</a>
 
 			<nav>
 				<ul class="navigation list">
@@ -52,7 +52,7 @@
 			<!--Features-->
 
 			<section class="content-block">
-				<h2 class="section-header">Features</h2>
+				<h2 class="section-header visually-hidden">Features</h2>
 
 				<ul class="list">
 					<li>
@@ -126,7 +126,7 @@
 
 		<footer class="footer">
 			<div>
-				<a class="logo footer link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
+				<a class="logo footer" href="index.html"><span class="logo-accent">Web</span>Studio</a>
 				<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
 			</div>
 		</footer>
