--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header>
-			<a class="logo header link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
+			<a class="logo header" href="index.html"><span class="logo-accent">Web</span>Studio</a>
 
 			<nav>
 				<ul class="navigation list">
@@ -45,79 +45,89 @@
 
 		<main>
 			<section>
-				<h1 class="header">List of services</h1>
+				<h1 class="visually-hidden">List of services</h1>
 
 				<!-- List filter -->
-				<div>
-					<button class="filter-button" type="button">All</button>
-					<button class="filter-button" type="button">Web Site</button>
-					<button class="filter-button" type="button">App</button>
-					<button class="filter-button" type="button">Design</button>
-					<button class="filter-button" type="button">Marketing</button>
-				</div>
+				<ul class="list">
+					<li>
+						<button class="filter-button" type="button">All</button>
+					</li>
+					<li>
+						<button class="filter-button" type="button">Web Site</button>
+					</li>
+					<li>
+						<button class="filter-button" type="button">App</button>
+					</li>
+					<li>
+						<button class="filter-button" type="button">Design</button>
+					</li>
+					<li>
+						<button class="filter-button" type="button">Marketing</button>
+					</li>
+				</ul>
 
 				<!-- SERVICES LIST -->
 				<ul class="list">
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" />
-							<h3 class="header">Banking App Interface Concept</h3>
+							<h2 class="header">Banking App Interface Concept</h2>
 							<p>App</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300" />
-							<h3 class="header">Cashless Payment</h3>
+							<h2 class="header">Cashless Payment</h2>
 							<p>Marketing</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/meditaion-app.jpg" alt="meditaion-app" width="360" height="300" />
-							<h3 class="header">Meditaion App</h3>
+							<h2 class="header">Meditaion App</h2>
 							<p>App</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/texi-service.jpg" alt="texi-service" width="360" height="300" />
-							<h3 class="header">Taxi Service</h3>
+							<h2 class="header">Taxi Service</h2>
 							<p>Marketing</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/screen-illustration.jpg" alt="screen-illustration" width="360" height="300" />
-							<h3 class="header">Screen Illustrations</h3>
+							<h2 class="header">Screen Illustrations</h2>
 							<p>Design</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300" />
-							<h3 class="header">Online Courses</h3>
+							<h2 class="header">Online Courses</h2>
 							<p>Marketing</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/instagram-stories.jpg" alt="instagram-stories" width="360" height="300" />
-							<h3 class="header">Instagram Stories Concept</h3>
+							<h2 class="header">Instagram Stories Concept</h2>
 							<p>Design</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/organic-food.jpg" alt="organic-food" width="360" height="300" />
-							<h3 class="header">Organic Food</h3>
+							<h2 class="header">Organic Food</h2>
 							<p>Web Site</p>
 						</a>
 					</li>
 					<li class="list-box">
 						<a href="" class="portfolio-item">
 							<img src="./images/freesh-coffee.jpg" alt="freesh-coffee" width="360" height="300" />
-							<h3 class="header">Fresh Coffee</h3>
+							<h2 class="header">Fresh Coffee</h2>
 							<p>Web Site</p>
 						</a>
 					</li>
@@ -129,7 +139,7 @@
 
 		<footer class="footer">
 			<div>
-				<a class="logo footer link" href="index.html"><span class="logo-accent">Web</span>Studio</a>
+				<a class="logo footer" href="index.html"><span class="logo-accent">Web</span>Studio</a>
 				<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
 			</div>
 		</footer>
